--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="user">
             <img src="Barber_Shop_img/img-3.jpg" height="50">
             <div class="user info">
-             <h4>Balaji.S</i></h4>
+             <h4>Bawadharani Sree. R</i></h4>
              <small> </small>
             </div>
         </div>
